removed .NetFramework support and upgraded to .Net 6

--- a/src/Xbehave.Core/Xbehave.Core.csproj
+++ b/src/Xbehave.Core/Xbehave.Core.csproj
@@ -8,7 +8,7 @@
     <NoWarn>$(NoWarn);NU5128;CA1303</NoWarn>
     <NuspecFile>$(NUSPEC_FILE)</NuspecFile>
     <RootNamespace>Xbehave</RootNamespace>
-    <TargetFramework>netstandard1.1</TargetFramework>
+    <TargetFramework>net6.0</TargetFramework>
   </PropertyGroup>
 
   <ItemGroup>
