--- a/tests/Xbehave.Test/dotnet/Xbehave.Test.dotnet.csproj
+++ b/tests/Xbehave.Test/dotnet/Xbehave.Test.dotnet.csproj
@@ -5,7 +5,7 @@
     <CopyLocalLockFileAssemblies>true</CopyLocalLockFileAssemblies>
     <NoWarn>$(NoWarn);CS0168;CS1591</NoWarn>
     <RollForward>major</RollForward>
-    <TargetFrameworks>netcoreapp2.1;netcoreapp3.1;net5.0</TargetFrameworks>
+    <TargetFramework>net6.0</TargetFramework>
   </PropertyGroup>
 
   <ItemGroup>
